--- a/ᏥᏍᏕᏥ.mw
+++ b/ᏥᏍᏕᏥ.mw
@@ -23,9 +23,9 @@
 == ᎯᎠ ᏥᏍᏕᏥ ==
 ᎯᎠ ᎣᎯᏍᏗ-ᎤᎾᏅᏛ ᏥᏍᏕᏥ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᎯᎠ [[Black Rat|ᎬᎿᎨ ᏥᏍᏕᏥ]] ''Rattus rattus'' ᎠᎴ ᎯᎠ [[Brown Rat|ᏬᏗᎨ ᏥᏍᏕᏥ]] ''R. norvegicus''. ᎯᎠ ᎤᎾᏓᏟᏌᎲ ᎨᏒᎢ ᏂᎦᎥᏊ ᎤᎾᏅᏛ ᏥᏄᏍᏗ ᎯᎠ ᎠᎦᏴᎵ ᎡᎶᎯ ᏥᏍᏕᏥ ᎠᎴ ᎤᏙᎯᏳ ᏥᏍᏕᏥ, ᎠᎴ originated ᎭᏫᎾᏗᏢ Asia. ᏥᏍᏕᏥ ᎠᎴ ᎤᏔᏂᏗ ᎬᎾᏬᏍᎬ ᎤᎪᏗᏗ ᎤᎾᏤᎵ ᎦᏃᏢᏥᏙᎯ, ᎯᎠ ᎠᎦᏴᎵ ᎡᎶᎯ [[mouse|ᏥᏍᏕᏥ]], ᎠᎴ ᎢᏳᏓᎵᎭ ᎦᏙᏗ ᎦᏬᎯᎸᏙᏗ 500 [[gram|ᏄᏓᎨᏒ]]ᎭᏫᎾᏗᏢ ᎯᎠ ᎨᏯᏔᎯ.  ᎯᎠ ᏧᏣᏔᏊ ᎠᎴᏂᏍᎬ "ᏥᏍᏕᏥ" ᎨᏒᎢ ᎾᏍᎩ ᎾᏍᏇ ᎬᏔᏅᎯ ᎭᏫᎾᏗᏢ ᎯᎠ ᏚᎾᏙᎥ ᏐᎢ ᎤᏍᏗ [[mammal|gantlai]]ᎦᏙ ᎤᏍᏗ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎤᏙᎯᏳ ᏥᏍᏕᏥ. ᏱᏓᏟᎶᏍᏔᏅ ᎠᏠᏯᏍᏛ ᎯᎠ ᎤᏴᏢ ᏴᏩᏁᎬ [[pack rat|ᎦᏇᏅᏗ ᏥᏍᏕᏥ]], ᏎᏍᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏗᏲᏒᎯ ᎤᏯᏅᎲ [[kangaroo rat|ᎠᏓᎾᏫᏛᏗ ᏥᏍᏕᏥ]], ᎠᎴ ᏎᏍᏗ ᎠᏂᏐᎢ.  ᏐᎢ ᏥᏍᏕᏥ ᏯᏛᎿ ᏥᏄᏍᏗ ᎯᎠ [[Bandicoot rat|Bandicoot ᏥᏍᏕᏥ]] ''Bandicota bengalensis'' ᎠᎴ murine rodents ᎪᎱᏍᏗ ᎠᎾᏓᏛᏂ ᎯᎠ ᎤᏙᎯᏳ ᏥᏍᏕᏥ, ᎠᎴ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏁᎳ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ''Rattus''. ᎯᎠ ᏂᎬᎢ ᎠᏗᎦᎴᏴ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏥᏍᏕᏥ ᎢᏯᏓᏛᏁᏗ ᎠᏂᎦᏲᎵ ᎭᏫᎾᏗᏢ ᎪᎯ ᏧᏓᎴᎿᎢ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ. ᎤᎪᏗᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏥᏍᏕᏥ ᎠᎴ [[Endemic (ecology)|ᎠᎽᏰᎵ ᏫᏚᏳᎪᏛ]]ᎠᎴ ᎢᎦᏛ ᎤᎭ ᏗᏙᎳᎩ ᎦᏂᏰᎩ ᎤᏍᏆᎸᎲ ᏗᎦᎶᎪᏗ ᎤᏲᎱᏎᎸ ᎠᎴ ᎠᏓᎪᏅᏙᏗᏱ ᎬᏙᏗ [[Angelo Rantac]], [[Black Rat|ᎬᎿᎨ]], ᎠᎴ [[Polynesian Rat|Polynesian]] ᏥᏍᏕᏥ.
 
-ᎭᏫᎾᏗᏢ [[Western countries|ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]], ᎤᎪᏗᏗ ᏴᏫ ᎠᏍᏆᏂᎪᏙᏗ ᎫᏄᏡᏂ ᏥᏍᏕᏥ ᏥᏄᏍᏗ [[pet|ᎤᏓᏅᏗ]]. ᎾᏍᎩ ᎯᎠ ᎠᎴ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ''R. norvegicus'', ᎦᏙ ᎤᏍᏗ ahena ahani ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎦᎾᏫᏗᏍᎩ ᎠᎴ ᎠᏰᏍᏛᏗ Europe ᎠᎴ ᏭᎵᏱᎶᎸ, ᎭᏫᎾᏗᏢ 1775, ᎯᎠ ᎢᏤ ᎡᎶᎯ.  ᎤᏓᏅᏗ ᏥᏍᏕᏥ ᎠᎴ ᏬᏗᎨ ᏥᏍᏕᏥ ahena vhnai ᏂᏛᎴᏅᏓ ᎾᏍᎩ ᏗᏓᏓᏂᎸᏣᏘ ᎾᏍᎩᎾᎢ ᏅᎠᏯᏍᏗ, ᎠᎴ ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᏯᏅᎲ "[[fancy rat|ᎦᎸᏉᏗᏍᎬ ᏥᏍᏕᏥ]]", ᎠᎴ ᎤᏅᏌ ᎠᎴ ᏙᎢ ᎯᎠ ᎤᏠᏱ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏥᏄᏍᏗ ᎯᎠ ᏧᏣᏔᏊ ᎦᏚᎲᎢ "ᎤᎶᎯᏍᏗ" ᏥᏍᏕᏥ. ᎫᏄᏡᏂ ᏥᏍᏕᏥ ᏫᏚᏳᎪᏛ ᎾᏍᏋ ᎢᏧᎳ ᎤᏟ ᎢᎦᎢ ᎠᎾᏕᎶᏆᏍᎬ ᎬᎾᏬᏍᎬ ᎤᎾᏤᎵ ᎨᏯᏔᎯ ᏧᏂᎦᏴᎵᎨ ᎢᏳᎵᏍᏔᏅ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎥᏳᎩ ᎠᏞᏴᏍᏙᏗ, ᎤᏍᏆᎸᎲ.
+ᎭᏫᎾᏗᏢ [[Western countries|ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ]], ᎤᎪᏗᏗ ᏴᏫ ᎠᏍᏆᏂᎪᏙᏗ ᎫᏄᏡᏂ ᏥᏍᏕᏥ ᏥᏄᏍᏗ [[pet|ᎤᏓᏅᏗ]]. ᎾᏍᎩ ᎯᎠ ᎠᎴ ᎯᎠ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ''R. norvegicus'', ᎦᏙ ᎤᏍᏗ ᎠᎮᎾ ᎠᎭᏂ ᎭᏫᎾᏗᏢ ᎯᎠ ᎠᎦᎾᏫᏗᏍᎩ ᎠᎴ ᎠᏰᏍᏛᏗ Europe ᎠᎴ ᏭᎵᏱᎶᎸ, ᎭᏫᎾᏗᏢ 1775, ᎯᎠ ᎢᏤ ᎡᎶᎯ.  ᎤᏓᏅᏗ ᏥᏍᏕᏥ ᎠᎴ ᏬᏗᎨ ᏥᏍᏕᏥ ᎠᎮᎾ ᎥᎿᎢ ᏂᏛᎴᏅᏓ ᎾᏍᎩ ᏗᏓᏓᏂᎸᏣᏘ ᎾᏍᎩᎾᎢ ᏅᎠᏯᏍᏗ, ᎠᎴ ᎠᎴ ᎢᏳᏓᎵᎭ ᎤᏯᏅᎲ "[[fancy rat|ᎦᎸᏉᏗᏍᎬ ᏥᏍᏕᏥ]]", ᎠᎴ ᎤᏅᏌ ᎠᎴ ᏙᎢ ᎯᎠ ᎤᏠᏱ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᏥᏄᏍᏗ ᎯᎠ ᏧᏣᏔᏊ ᎦᏚᎲᎢ "ᎤᎶᎯᏍᏗ" ᏥᏍᏕᏥ. ᎫᏄᏡᏂ ᏥᏍᏕᏥ ᏫᏚᏳᎪᏛ ᎾᏍᏋ ᎢᏧᎳ ᎤᏟ ᎢᎦᎢ ᎠᎾᏕᎶᏆᏍᎬ ᎬᎾᏬᏍᎬ ᎤᎾᏤᎵ ᎨᏯᏔᎯ ᏧᏂᎦᏴᎵᎨ ᎢᏳᎵᏍᏔᏅ ᎠᎴ ᎤᏟ ᎢᎦᎢ ᎥᏳᎩ ᎠᏞᏴᏍᏙᏗ, ᎤᏍᏆᎸᎲ.
 
-ᎯᎠ ᏧᏣᏔᏊ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᎢᏳᏓᎵᎭ ᎠᎴᏂᏓᏍᏗ ᎬᏙᏗ ᎠᎴ ᎾᎥᏂᎨ [[human|ᏴᏫ]]. ᎯᎠ [[Black Plague|ᎬᎿᎨ ᎤᏢᎢᏍᏗᏍᎬ]] ᎨᏒᎢ ᎧᏃᎮᎸᎯ ᎤᏬᎯᏳᏅ ᎤᎭ ᏭᏪᏙᎢ ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎯᎠ micro-ᎠᏓᏁᎳᏅᎯ ''[[Yersinia pestis]]'', ᎠᏫᏛᏓ ᎾᎥᎢ ᎯᎠ ᏥᏍᏕᏥ ᏣᏑᎦ ''[[Xenopsylla cheopis]]'' ᎦᏙ ᎤᏍᏗ ᎾᎿ ''R. rattus'' ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ European ᏕᎦᏚᎲ ᎯᎠ ᎢᎦ; ᎾᏍᎩ ᎨᏒᎢ ᎢᎦᏪᏛ Ꮎ ᎾᏍᎩ ᎯᎠ ᏥᏍᏕᏥ ᎨᏒᎩ ᎠᏥᏐᏅᏅ ᎯᎠ ᎤᏢᎢᏍᏗᏍᎬ ᎤᏅᏌ. ᎾᏍᎩ ᎤᎭ ᏝᏱᎪᎯᎩ ᏭᏪᏙᎢ ᎧᏁᎢᏍᏔᏅ Ꮎ ᎥᏝ ᎢᏳᏍᏗ ᏥᏍᏕᏥ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ infected ᏣᏑᎦ ᏯᏓᎢᏗᏏ ᎤᎭ ᎠᏰᏍᏛᏗ ᎦᏣᏄᎳ ᏰᎵᏊ ᏗᎬᏩᎶᏒ Europe ᎾᏍᏋ ᏄᏓᎷᎸᎾ ᎤᏠᎾᏍᏗ, ᎾᏍᎩ ᎤᏁᎳᎩ ᎪᎯ ᎨᏒᎢ ᎧᏃᎮᎸᏗ ᎠᎴ ᏅᎠᏯᏍᏗ ᏫᎬᎵᏱᎴᎩ. ᎾᎪᎲᎾ, ᏥᏍᏕᏥ ᎠᎴ ᎢᏳᏓᎵᎭ ᎾᏍᎩᎾᎢ hno ᎠᎵᏍᏓᏴᏗ ᏓᏓᏁᎭ ᎠᎴ ᏐᎢ ᏧᎬᏩᎶᏗ. ᎤᎾᏤᎵ ᏄᏍᏛ ᎠᎦᏓᏅᏖᏗ ᎤᎭ ᎠᏫᏛᏓ ᎾᎾᎯ ᏧᏣᏔᏊ ᏄᏦᏍᏛᎾ ᎪᎵᏍᏗ: ᎭᏫᎾᏗᏢ ᎯᎠ [[English language|ᎩᎵᏏ ᎦᏬᏂᎯᏍᏗ]], "ᏥᏍᏕᏥ" ᎨᏒᎢ ᎠᏓᏕᎰᏙᏗ ᎠᎴ "ᏥᏍᏕᏥ ᎾᎿ ᎩᎶ ᎠᏏᏴᏫ" ᎨᏒᎢ ᎠᏓᎶᏄᎮᏗ ᎠᏂ ᎾᎥᎢ ᎯᎠ ᏚᎾᎳᏏᏛ [[crime|ᎠᏍᎦᏅᏨ]] ᎠᎴ ᎤᏐᏅ ᎢᏯᏛᏁᏗ ᎤᏅᏌ ᎾᏛᏁᎸ.  ᎾᎯᏳᎢ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎨᏯᏔᎯ ᏥᏍᏕᏥ ᏰᎵᏇ ᎠᏫᏛᏗ [[Leptospirosis]] ᎠᎴ ᎢᎦᏛ ᏐᎢ "zoonotic" ᏄᏍᏗᏓᏅ (ᎾᏍᎩ ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᏭᏚᏓᏲᎯᏎᎸ ᏗᎦᎾᏗᎯᏍᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎠᏂᏴᏫ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ), ᎾᏍᎩ ᎯᎠ ᏄᏍᏗᏓᏅ ᎠᎴ ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ ᎢᏅᎯ ᎢᏳᏓᎵ ᎠᏩᏛᏗ. ᎨᏯᏔᎯ ᏥᏍᏕᏥ ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᎣᏍᏛ ᏄᏍᏗᏓᏅ ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ nvwatohiyadv ᎠᎴ ᎤᏓᎵᏂᎩᏛ ᎡᎿᎢ ᎡᎥ.  ᎨᏯᏔᎯ ᏥᏍᏕᏥ ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᏕᎦᏚᎲ ᎠᎾᏍᎬᏘ agilyoasdi ᎤᏅᏌ ᏂᏛᎴᏅᏓ ᎤᏲᎢᏳᏛᎾᎮᏕᎩ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎭᏫᏂ [[parasite|ᎠᏥᎾᏝᎢ]]ᎠᎴ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᎥᏊ ᎠᏰᏍᏛᏗ ᎥᏳᎩ ᎠᏂᏴᏫ.
+ᎯᎠ ᏧᏣᏔᏊ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ ᎠᎴ ᎢᏳᏓᎵᎭ ᎠᎴᏂᏓᏍᏗ ᎬᏙᏗ ᎠᎴ ᎾᎥᏂᎨ [[human|ᏴᏫ]]. ᎯᎠ [[Black Plague|ᎬᎿᎨ ᎤᏢᎢᏍᏗᏍᎬ]] ᎨᏒᎢ ᎧᏃᎮᎸᎯ ᎤᏬᎯᏳᏅ ᎤᎭ ᏭᏪᏙᎢ ᎢᎬᏂᏌᏅᎯ ᎾᎥᎢ ᎯᎠ micro-ᎠᏓᏁᎳᏅᎯ ''[[Yersinia pestis]]'', ᎠᏫᏛᏓ ᎾᎥᎢ ᎯᎠ ᏥᏍᏕᏥ ᏣᏑᎦ ''[[Xenopsylla cheopis]]'' ᎦᏙ ᎤᏍᏗ ᎾᎿ ''R. rattus'' ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ European ᏕᎦᏚᎲ ᎯᎠ ᎢᎦ; ᎾᏍᎩ ᎨᏒᎢ ᎢᎦᏪᏛ Ꮎ ᎾᏍᎩ ᎯᎠ ᏥᏍᏕᏥ ᎨᏒᎩ ᎠᏥᏐᏅᏅ ᎯᎠ ᎤᏢᎢᏍᏗᏍᎬ ᎤᏅᏌ. ᎾᏍᎩ ᎤᎭ ᏝᏱᎪᎯᎩ ᏭᏪᏙᎢ ᎧᏁᎢᏍᏔᏅ Ꮎ ᎥᏝ ᎢᏳᏍᏗ ᏥᏍᏕᏥ ᎠᎴ ᎾᏍᎩ ᏂᎨᏒᎾ infected ᏣᏑᎦ ᏯᏓᎢᏗᏏ ᎤᎭ ᎠᏰᏍᏛᏗ ᎦᏣᏄᎳ ᏰᎵᏊ ᏗᎬᏩᎶᏒ Europe ᎾᏍᏋ ᏄᏓᎷᎸᎾ ᎤᏠᎾᏍᏗ, ᎾᏍᎩ ᎤᏁᎳᎩ ᎪᎯ ᎨᏒᎢ ᎧᏃᎮᎸᏗ ᎠᎴ ᏅᎠᏯᏍᏗ ᏫᎬᎵᏱᎴᎩ. ᎾᎪᎲᎾ, ᏥᏍᏕᏥ ᎠᎴ ᎢᏳᏓᎵᎭ ᎾᏍᎩᎾᎢ hno ᎠᎵᏍᏓᏴᏗ ᏓᏓᏁᎭ ᎠᎴ ᏐᎢ ᏧᎬᏩᎶᏗ. ᎤᎾᏤᎵ ᏄᏍᏛ ᎠᎦᏓᏅᏖᏗ ᎤᎭ ᎠᏫᏛᏓ ᎾᎾᎯ ᏧᏣᏔᏊ ᏄᏦᏍᏛᎾ ᎪᎵᏍᏗ: ᎭᏫᎾᏗᏢ ᎯᎠ [[English language|ᎩᎵᏏ ᎦᏬᏂᎯᏍᏗ]], "ᏥᏍᏕᏥ" ᎨᏒᎢ ᎠᏓᏕᎰᏙᏗ ᎠᎴ "ᏥᏍᏕᏥ ᎾᎿ ᎩᎶ ᎠᏏᏴᏫ" ᎨᏒᎢ ᎠᏓᎶᏄᎮᏗ ᎠᏂ ᎾᎥᎢ ᎯᎠ ᏚᎾᎳᏏᏛ [[crime|ᎠᏍᎦᏅᏨ]] ᎠᎴ ᎤᏐᏅ ᎢᏯᏛᏁᏗ ᎤᏅᏌ ᎾᏛᏁᎸ.  ᎾᎯᏳᎢ ᎪᎯᏊ ᎢᏴ ᏥᎩ ᎨᏯᏔᎯ ᏥᏍᏕᏥ ᏰᎵᏇ ᎠᏫᏛᏗ [[Leptospirosis]] ᎠᎴ ᎢᎦᏛ ᏐᎢ "zoonotic" ᏄᏍᏗᏓᏅ (ᎾᏍᎩ ᎦᏙ ᎤᏍᏗ ᏰᎵᏇ ᎾᏍᏋ ᏭᏚᏓᏲᎯᏎᎸ ᏗᎦᎾᏗᎯᏍᏗ ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ, ᎠᏂᏴᏫ, ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ), ᎾᏍᎩ ᎯᎠ ᏄᏍᏗᏓᏅ ᎠᎴ ᎭᏫᎾᏗᏢ ᏯᏛᎾ ᎤᏙᎯᏳ ᎢᏅᎯ ᎢᏳᏓᎵ ᎠᏩᏛᏗ. ᎨᏯᏔᎯ ᏥᏍᏕᏥ ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᎣᏍᏛ ᏄᏍᏗᏓᏅ ᎠᎴ ᎢᏯᏛᏁᎵᏓᏍᏗ nvwatohiyadv ᎠᎴ ᎤᏓᎵᏂᎩᏛ ᎡᎿᎢ ᎡᎥ.  ᎨᏯᏔᎯ ᏥᏍᏕᏥ ᎠᎴᏂᏙᎲ ᎭᏫᎾᏗᏢ ᏕᎦᏚᎲ ᎠᎾᏍᎬᏘ ᎠᎩᏲᎠᏍᏗ ᎤᏅᏌ ᏂᏛᎴᏅᏓ ᎤᏲᎢᏳᏛᎾᎮᏕᎩ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎭᏫᏂ [[parasite|ᎠᏥᎾᏝᎢ]]ᎠᎴ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᏂᎦᎥᏊ ᎠᏰᏍᏛᏗ ᎥᏳᎩ ᎠᏂᏴᏫ.
 
 ᎯᎠ ᏥᏍᏕᏥ ᏗᎪᏢᏅ ᎣᏌᏂ ᎤᏓᏅᏗ, ᎤᎾᏅᏛ ᎾᏍᎩᎾᎢ Ꮝ ᎪᎱᏍᏗ ᎨᏒ, ᎠᏓᎦᎵᏍᏙᏗ. ᎤᏅᏌ ᎠᎴ ᏭᎶᏒᏍᏔᏅ ᎤᏓᏅᎦᎸᏓ. ᏥᏍᏕᏥ ᏰᎵᏇ ᎾᏍᏋ ᏚᏕᏲᏅᎩ ᎤᏓᏅᏘ ᏓᎾᎵᏃᎮᏍᎬ ᎬᏩᏓᎵᏓᏍᏗ, ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏠᏱ ᎦᎶᎯᏍᏗ ᏥᏄᏍᏗ ᎤᎪᏗᏗ ᏐᎢ ᎫᏄᏡᏂ ᎡᎿᎢ ᎡᎥ.
 
@@ -38,8 +38,8 @@
 ᎭᏫᎾᏗᏢ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ [[Chinese culture|Chinese ᎥᎦᏔᎲᎢ]], ᎯᎠ ᏥᏍᏕᏥ (ᏱᏓᏟᎶᏍᏔᏅ ᏩᏎᎸᎯ ᏥᏄᏍᏗ ᏥᏍᏕᏥ) ᎨᏒᎢ ᎯᎠ ᎢᎬᏱ ᎯᎠ ᏔᎵᏚ ᎡᎿᎢ ᎡᎥ ᎯᎠ [[Chinese zodiac|Chinese ᎠᏍᏓᏅᏅ]]. ᏴᏫ ᎤᏕᏅ ᎭᏫᎾᏗᏢ ᎪᎯ ᏑᏕᏘᏴᏓ ᎠᎴ utugi uwasv ᏄᏩᎿᏅ ᎢᎦ ᏦᏍᏓ ᎤᎾᎵᎪᏅᎯ ᎬᏙᏗ ᏥᏍᏕᏥ. ᎾᏍᎩ ᎯᎠ ᎠᏠᏯᏍᏛ, ᏧᏳᎪᏗᎭ, ᎠᎾᏓᏁᎲ, ᎠᎦᎵᏯ, ᎤᎵᏍᏓ ᎤᏓᏅᏖᏗ. "ᏥᏍᏕᏥ" (ᎠᏯ.e. ᏴᏫ ᎤᏕᏅ ᎭᏫᎾᏗᏢ ᏑᏕᏘᏴᏓ ᎯᎠ ᏥᏍᏕᏥ) ᎠᎴ ᏄᏪᏒᎩ ᎠᎩᏍᏗᏱ ᎨᎳᏛᏍᏗ ᎠᏔᎴᏒ ᎠᎹᏱ ᎬᏙᏗ "ᎠᏓᎵᏍᎩᏱᏍᎩ" ᎠᎴ "ᏓᎦᏘᎴᎬ," ᎠᎴ ᎠᎩᏍᏗᏱ ᎨᎳᏛᏍᏗ ᎥᏳᎩ ᎬᏙᏗ "ᎠᏂᏐᏈᎵ."
 
 [[File:Ganesha on mouse.jpg|thumb|right|230px|[[Ganesh]] ᎠᎩᎸᎥᏍᎬ ᎾᎿ ᎤᏤᎵ ᏥᏍᏕᏥ. ᎠᏓᏚᎬ ᎪᏪᎵ ᎯᎠ ᎠᏂᏥᎸᏍᎩ ᎠᏍᎪᎸᏔᏅ ᎾᎥᎢ ᎯᎠ ᎠᎵᏂᎬᏁᏗᎢ.  ᎤᏙᏢᏒ ᎾᎾᎢ ᎯᎠ [[Vaidyeshwara]] ᏧᏂᎳᏫᎢᏍᏗ ᎾᎾᎢ [[Talakkadu]], [[Karnataka]], [[India|ᎠᎹ ᎦᏄᎪᎬ]]]]
-ᎭᏫᎾᏗᏢ [[India|ᎠᎹ ᎦᏄᎪᎬ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏕᎵᎬᏗᏢ ᎤᏴᏢ ᎦᏚᎲᎢ [[Deshnoke]], ᎯᎠ [[Karni Mata]] ᏧᏂᎳᏫᎢᏍᏗ, ᎯᎠ ᏥᏍᏕᏥ ᎠᎴ ᎠᏰᎲᎩ ᎾᏍᏋ ᎤᏩᎫᏗᏗᏒ ᎾᏍᎩᎾᎢ [[reincarnation]] ᏥᏄᏍᏗ [[Sadhus]], [[Hindu]] ᎦᎸᏉᏗᏳ ansigaya. ᎯᎠ ᎠᏁᏙᎲ ᎠᎵᏣᏙᎲᏍᎩ ᎨᎳᏍᏙᏗ ᎤᏅᏗ ᎠᎴ ᎤᏛᏒ ᎤᎦᏔ, ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᎵᎪᏒ, ᎯᎠ ᎡᎿᎢ ᎡᎥ.  ᎠᎵᏍᏓᏴᎲᏍᎬ ᎠᎵᏍᏓᏴᏗ Ꮎ ᎤᎭ ᏭᏪᏙᎢ ᎤᏒᏂᎸ ᎾᎥᎢ ᎯᎠ ᎡᎿᎢ ᎡᎥ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎠᏓᏙᎵᎩ ᏂᏛᎴᏅᏓ ᎤᏁᎳᏅᎯ. ᎭᏫᎾᏗᏢ [[Hindu mythology|Hindu ᎤᏁᎳᏅᎯ]], ᏥᏍᏕᏥ ᎨᏒᎢ ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ [[Ganesha]].
-[[Western civilization|ᏭᏕᎵᎬᏗᏢ]] ᎤᎾᎵᎪᏒ ᎬᏙᏗ ᎯᎠ ᏥᏍᏕᏥ ᎠᎴ ᏂᎦᎥᏊ ᏗᎦᏘᎴᎩ ᏄᏍᏛ ᎧᏃᎮᏗ. ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, "ᏥᏍᏕᏥ!" ᎨᏒᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᏅᎪᏢᎯᏐᏗᏱ ᎾᏍᎩᎾᎢ ᏧᏓᎴᏅᏓ ᎤᏁᎩᎳᏗ ᎦᏬᏂᎯᏍᏗ [[interjection|ᎤᎾᏓᏟᏌᎲ]]. ᎾᏍᎩ ᎯᎠ ᎤᎾᎵᎪᏒ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏎᎯᏍᏗ, ''ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ se'', ᏂᏛᎴᏅᏓ ᏂᎦᎵᏍᏗᏍᎬᎫ biological ᎠᎴ ᏫᏚᏳᎪᏛ ᎯᎠ ᏥᏍᏕᏥ, ᎠᎴ ᏰᎵᏊ ᏱᎩ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᎾᎵᎪᏒ ᏥᏍᏕᏥ (ᎠᎴ [[fleas|ᏣᏑᎦ]]) ᎬᏙᏗ ᎯᎠ 14th-sqohitsuqui tsudetiyvdi lyudetiyvda ᎤᏢᎢᏍᏗᏍᎬ ᎤᏯᏅᎲ ᎯᎠ [[Black Death|ᎬᎿᎨ ᎠᏲᎱᎯᏍᏗ]].  ᏥᏍᏕᏥ ᎠᎴ ᎠᎪᎲᎢ ᏥᏄᏍᏗ ᎠᏲᎶᎬ, ᎦᏓᎭ, ᎠᎩᏍᎬᎢ ᎡᎿᎢ ᎡᎥ Ꮎ ᎦᏃᏍᎩᏍᏗ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏰᏍᏛᏗ ᎥᏳᎩ.  ᎾᎯᏳᎢ ᏥᏍᏕᏥ, ᎠᏂᎩᏟ, ᎠᎴ ᏪᏌ ᎠᎾᏍᎬᏘ ᏂᎦᏛ ᎾᏍᏋ [[pest (animal)|ᎠᏍᎩᎾᏗᏍᏗ]] ᎭᏫᎾᏗᏢ ᎦᏁᎸ ᎡᏍᎦᏂ, ᎭᏫᎾᏗᏢ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎠᏲᎶᎬ ᏥᏍᏕᏥ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎾᎯᏳᎢ ᎾᎾᏛᏁᎲ ᎯᎠ ᎤᏠᏱ feral ᎠᏂᎩᏟ ᎠᎴ ᏪᏌ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎤᏦᎠᏎᏗ ᎪᎷᏩᏛᏓ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎧᏃᏗᎢ ᎤᎪᏗᏗ ᏴᏫ.  ᏓᎦᏘᎴᎬ, ᎠᏍᎦᏯ-ᎠᎵᏍᏓᏴᎲᏍᎬ ᏥᏍᏕᏥ ᎠᎴ ᎯᎠ ᏓᎦᏘᎴᎬ ᎭᏫᎾᏗᏢ [[James Herbert]] ᎤᏤᎵ [[Horror fiction|ᎦᎾᏰᎩ ᏗᎪᎵᏰᏗ ᎪᏪᎵ]] ''ᎯᎠ ᏥᏍᏕᏥ'' ᎠᎴ Ꮝ ᎦᏟᏐᏗᎩ. [[phobia]] ᏥᏍᏕᏥ ᎨᏒᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎠᏓᎩᎵᏲᏍᏙᏗ ᏄᏍᏛ ᏗᎧᏃᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎪᎵᏰᏗ ᎪᏪᎵ ''[[Nineteen Eighty-Four|ᏐᏁᎳᏚ ᏁᎳᏍᎪᎯ-ᏅᎩ]]'' ᎾᎥᎢ [[George Orwell]]'. ᏥᏍᏕᏥ ᎠᎴ ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᏦᏍᏗᏓᏄᏫ ᎭᏫᎾᏗᏢ [[Brian Jacques]] ᎤᏤᎵ  ''[[Redwall]]'' ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ anthropomorphic [[fantasy|ᎢᏰᎵᏍᏗᎢ]] ᏗᎪᎵᏰᏗ ᎪᏪᎵ. ᎾᎿᎢ ᎠᎴ ᎠᎬᏂ ᏗᎦᏘᎸᏓ; ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᎠᎦᏓᏅᏖᏗ ''[[Mrs. Frisby and the Rats of NIMH|ᎠᎨᏴ. Frisby ᎠᎴ ᎯᎠ ᏥᏍᏕᏥ  NIMH]]'', ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ ''[[Ratz (television series)|Ratz]]'' ᎠᎴ [[Terry Pratchett]] ᎤᏤᎵ ''[[The Amazing Maurice and his Educated Rodents|ᎯᎠ Amazing Maurice ᎠᎴ ᎤᏤᎵ ᎥᎦᏔᎲᎢ Rodents]]''. ᏄᏍᏛ ᎠᏂᏃᎮᏍᎬ ᎠᏏᏴᏫ ᏥᏄᏍᏗ "ᏥᏍᏕᏥ-ᎾᏍᎩᏯᎢ" ᎤᏠᏱᎭ  ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᏄᎦᏎᏍᏛᎾ ᎠᎴ ᎾᎪᎯᏳᎲᏍᎬᎾ.  ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ, ᏥᏍᏕᏥ ᎠᎴ ᎪᏢᏒᎢ ᏥᏄᏍᏗ ᎤᎵᎶᎯ ᎠᎴ [[bourgeoisie|ᎦᎴᏴᏗᏍᎬᎢ]].
+ᎭᏫᎾᏗᏢ [[India|ᎠᎹ ᎦᏄᎪᎬ]] ᎭᏫᎾᏗᏢ ᎯᎠ ᎤᏕᎵᎬᏗᏢ ᎤᏴᏢ ᎦᏚᎲᎢ [[Deshnoke]], ᎯᎠ [[Karni Mata]] ᏧᏂᎳᏫᎢᏍᏗ, ᎯᎠ ᏥᏍᏕᏥ ᎠᎴ ᎠᏰᎲᎩ ᎾᏍᏋ ᎤᏩᎫᏗᏗᏒ ᎾᏍᎩᎾᎢ [[reincarnation]] ᏥᏄᏍᏗ [[Sadhus]], [[Hindu]] ᎦᎸᏉᏗᏳ ᎠᏏᎦᏯ. ᎯᎠ ᎠᏁᏙᎲ ᎠᎵᏣᏙᎲᏍᎩ ᎨᎳᏍᏙᏗ ᎤᏅᏗ ᎠᎴ ᎤᏛᏒ ᎤᎦᏔ, ᎦᏙ ᎤᏍᏗ ᎯᎠ ᏗᎦᏣᏄᎶ ᎤᎾᏣ ᎾᏍᎩ ᎾᏍᏇ ᎤᎾᎵᎪᏒ, ᎯᎠ ᎡᎿᎢ ᎡᎥ.  ᎠᎵᏍᏓᏴᎲᏍᎬ ᎠᎵᏍᏓᏴᏗ Ꮎ ᎤᎭ ᏭᏪᏙᎢ ᎤᏒᏂᎸ ᎾᎥᎢ ᎯᎠ ᎡᎿᎢ ᎡᎥ ᎨᏒᎢ ᎠᎦᏎᏍᏔᏅ ᎠᏓᏙᎵᎩ ᏂᏛᎴᏅᏓ ᎤᏁᎳᏅᎯ. ᎭᏫᎾᏗᏢ [[Hindu mythology|Hindu ᎤᏁᎳᏅᎯ]], ᏥᏍᏕᏥ ᎨᏒᎢ ᎯᎠ ᏧᎬᏩᎶᏗ ᎠᎦᏘᏯ [[Ganesha]].
+[[Western civilization|ᏭᏕᎵᎬᏗᏢ]] ᎤᎾᎵᎪᏒ ᎬᏙᏗ ᎯᎠ ᏥᏍᏕᏥ ᎠᎴ ᏂᎦᎥᏊ ᏗᎦᏘᎴᎩ ᏄᏍᏛ ᎧᏃᎮᏗ. ᎾᏍᎩᎾᎢ ᏄᎵᏍᏛ, "ᏥᏍᏕᏥ!" ᎨᏒᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᏅᎪᏢᎯᏐᏗᏱ ᎾᏍᎩᎾᎢ ᏧᏓᎴᏅᏓ ᎤᏁᎩᎳᏗ ᎦᏬᏂᎯᏍᏗ [[interjection|ᎤᎾᏓᏟᏌᎲ]]. ᎾᏍᎩ ᎯᎠ ᎤᎾᎵᎪᏒ ᎿᏛᎦ ᎾᏍᎩ ᏂᎨᏒᎾ ᎠᏎᎯᏍᏗ, ''ᎾᏍᎩ ᎢᎬᏂᏏᏍᎩ se'', ᏂᏛᎴᏅᏓ ᏂᎦᎵᏍᏗᏍᎬᎫ biological ᎠᎴ ᏫᏚᏳᎪᏛ ᎯᎠ ᏥᏍᏕᏥ, ᎠᎴ ᏰᎵᏊ ᏱᎩ ᏂᏛᎴᏅᏓ ᎯᎠ ᎤᎾᎵᎪᏒ ᏥᏍᏕᏥ (ᎠᎴ [[fleas|ᏣᏑᎦ]]) ᎬᏙᏗ ᎯᎠ 14th-ᏍᎣᎯᏧᏈ ᏧᏕᏘᏴᏗ ᏳᏕᏘᏴᏓ ᎤᏢᎢᏍᏗᏍᎬ ᎤᏯᏅᎲ ᎯᎠ [[Black Death|ᎬᎿᎨ ᎠᏲᎱᎯᏍᏗ]].  ᏥᏍᏕᏥ ᎠᎴ ᎠᎪᎲᎢ ᏥᏄᏍᏗ ᎠᏲᎶᎬ, ᎦᏓᎭ, ᎠᎩᏍᎬᎢ ᎡᎿᎢ ᎡᎥ Ꮎ ᎦᏃᏍᎩᏍᏗ ᎠᎵᏍᏓᏴᏗ ᎠᎴ ᎠᏰᏍᏛᏗ ᎥᏳᎩ.  ᎾᎯᏳᎢ ᏥᏍᏕᏥ, ᎠᏂᎩᏟ, ᎠᎴ ᏪᏌ ᎠᎾᏍᎬᏘ ᏂᎦᏛ ᎾᏍᏋ [[pest (animal)|ᎠᏍᎩᎾᏗᏍᏗ]] ᎭᏫᎾᏗᏢ ᎦᏁᎸ ᎡᏍᎦᏂ, ᎭᏫᎾᏗᏢ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ᎠᏲᎶᎬ ᏥᏍᏕᏥ ᎨᏒᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎾᎯᏳᎢ ᎾᎾᏛᏁᎲ ᎯᎠ ᎤᏠᏱ feral ᎠᏂᎩᏟ ᎠᎴ ᏪᏌ ᏯᏓᎢᏗᏏ ᎾᏍᏋ ᎤᏦᎠᏎᏗ ᎪᎷᏩᏛᏓ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎧᏃᏗᎢ ᎤᎪᏗᏗ ᏴᏫ.  ᏓᎦᏘᎴᎬ, ᎠᏍᎦᏯ-ᎠᎵᏍᏓᏴᎲᏍᎬ ᏥᏍᏕᏥ ᎠᎴ ᎯᎠ ᏓᎦᏘᎴᎬ ᎭᏫᎾᏗᏢ [[James Herbert]] ᎤᏤᎵ [[Horror fiction|ᎦᎾᏰᎩ ᏗᎪᎵᏰᏗ ᎪᏪᎵ]] ''ᎯᎠ ᏥᏍᏕᏥ'' ᎠᎴ Ꮝ ᎦᏟᏐᏗᎩ. [[phobia]] ᏥᏍᏕᏥ ᎨᏒᎢ ᎬᏔᏅᎯ ᏥᏄᏍᏗ ᎠᏓᎩᎵᏲᏍᏙᏗ ᏄᏍᏛ ᏗᎧᏃᏗ ᎭᏫᎾᏗᏢ ᎯᎠ ᏗᎪᎵᏰᏗ ᎪᏪᎵ ''[[Nineteen Eighty-Four|ᏐᏁᎳᏚ ᏁᎳᏍᎪᎯ-ᏅᎩ]]'' ᎾᎥᎢ [[George Orwell]]'. ᏥᏍᏕᏥ ᎠᎴ ᎯᎠ ᎤᎪᏗᏗ ᏧᏣᏔᏊ ᏦᏍᏗᏓᏄᏫ ᎭᏫᎾᏗᏢ [[Brian Jacques]] ᎤᏤᎵ  ''[[Redwall]]'' ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ anthropomorphic [[fantasy|ᎢᏰᎵᏍᏗᎢ]] ᏗᎪᎵᏰᏗ ᎪᏪᎵ. ᎾᎿᎢ ᎠᎴ ᎠᎬᏂ ᏗᎦᏘᎸᏓ; ᎾᏍᎩᎾᎢ ᏱᏓᏟᎶᏍᏔᏅ, ᎯᎠ ᎠᎦᏓᏅᏖᏗ ''[[Mrs. Frisby and the Rats of NIMH|ᎠᎨᏴ. Frisby ᎠᎴ ᎯᎠ ᏥᏍᏕᏥ  NIMH]]'', ᎯᎠ ᎧᏁᏉᎥᎢ ᎤᏠᏱᎭ ''[[Ratz (television series)|Ratz]]'' ᎠᎴ [[Terry Pratchett]] ᎤᏤᎵ ''[[The Amazing Maurice and his Educated Rodents|ᎯᎠ Amazing Maurice ᎠᎴ ᎤᏤᎵ ᎥᎦᏔᎲᎢ Rodents]]''. ᏄᏍᏛ ᎠᏂᏃᎮᏍᎬ ᎠᏏᏴᏫ ᏥᏄᏍᏗ "ᏥᏍᏕᏥ-ᎾᏍᎩᏯᎢ" ᎤᏠᏱᎭ  ᎾᏍᎩ ᎠᏍᎦᏯ ᎨᏒᎢ ᏄᎦᏎᏍᏛᎾ ᎠᎴ ᎾᎪᎯᏳᎲᏍᎬᎾ.  ᎭᏫᎾᏗᏢ ᏧᏓᎴᎾᎢ, ᏥᏍᏕᏥ ᎠᎴ ᎪᏢᏒᎢ ᏥᏄᏍᏗ ᎤᎵᎶᎯ ᎠᎴ [[bourgeoisie|ᎦᎴᏴᏗᏍᎬᎢ]].
 
 ᎾᎿ ᎯᎠ [[Isle of Man|ᎠᎽᏰᎵ  ᎠᏍᎦᏯ]] (ᎩᎵᏏ ᏓᎳᏏᏛ) ᎾᎿᎢ ᎨᏒᎢ [[taboo|ᎦᏅᏍᏙᎯᏍᏗ]] ᏗᎦᏘᎴᎩ ᎯᎠ ᎧᏁᏨ "ᏥᏍᏕᏥ."  ᎠᎪᏩᏛᏗ [[longtail]] ᎾᏍᎩᎾᎢ ᎤᏟ ᎢᎦᎢ ᎠᏓᏃᎯᏎᏗ. 
 
